tests/error/func_unknown_ret.gw
function unknwon_type my_function(){}
